# plugin_JupyterToolbox

./: CMakeLists.txt  README.md  jupyter_plugin.cpp
notebooks/: Demo.ipynb
